[#6] - Clean code and add route for useless link in header menu.

--- a/app/commons/header/header.html
+++ b/app/commons/header/header.html
@@ -10,8 +10,8 @@
         <a ng-href="#!/note" class="active">Blog</a>
         <a ng-href="#!/photos">Photos</a>
         <a ng-href="#!/pages/zhihu">Zhihu</a>
-        <a ng-link="dashboard">Dashboard</a>
-        <a ui-sref="users2">Users</a>
+        <a ng-href="#!/dashboard">Dashboard</a>
+        <a ng-href="#!/users">Users</a>
         <a href="https://github.com/JimmyLv/nobackend.website" target="_blank">GitHub</a>
     </div>
 
