[#6] - Add 3rd lib into vendor and fix jekyll build and remove useless angular index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div ng-viewport="dashboard"></div>
     <div ng-viewport="users"></div>
 
-    <div ng-include="'app/commons/footer/footer.html'"></div>
+    <app-footer></app-footer>
 </div>
 
 <script src="./dist/vendor.js"></script>
