[#6] - Remove some useless code and files.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>最美博客 - NoBackend Website created by 吕立青</title>
+    <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico"/>
     <link rel="stylesheet" href="./dist/app.css">
@@ -14,12 +14,6 @@
     <app-header></app-header>
     <div class="row" ng-view></div>
     <div class="row app-list" ui-view></div>
-
-    <div ui-view="viewA"></div>
-    <div ui-view="viewB"></div>
-    <div ng-viewport="dashboard"></div>
-    <div ng-viewport="users"></div>
-
     <app-footer></app-footer>
 </div>
 
