[#6] - Add v1 to achieve angular version.

--- a/app/commons/header/header.html
+++ b/app/commons/header/header.html
@@ -1,7 +1,7 @@
 <header id="header">
     <div class="logo">
         <a ng-href="#!/note" target="_blank" title="立青作品">
-            <img ng-src="./assets/images/avatar.jpg"/>
+            <img ng-src="assets/images/avatar.jpg"/>
         </a>
     </div>
     <div class="menu m-hide">
