[#6] - Fixed SPA reload issue when kit special post and add disqus again and fix missing dependencies version.

--- a/app/features/note/aside3/aside3.html
+++ b/app/features/note/aside3/aside3.html
@@ -12,5 +12,5 @@
           show-toc="$ctrl.showToc">
     </post>
 
-    <!--<dir-disqus config="$ctrl.disqusConfig"></dir-disqus>-->
+    <dir-disqus config="$ctrl.disqusConfig"></dir-disqus>
 </div>
