--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
     <title>Nobackend Website</title>
 </head>
 <body>
+<div>
+    <iframe src="https://ghbtns.com/github-btn.html?user=JimmyLv&repo=nobackend.website&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+    <iframe src="https://ghbtns.com/github-btn.html?user=JimmyLv&repo=nobackend.website&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+    <iframe src="https://ghbtns.com/github-btn.html?user=JimmyLv&repo=nobackend.website&type=fork&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+    <iframe src="https://ghbtns.com/github-btn.html?user=JimmyLv&type=follow&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+</div>
+<div style="margin-top: 100px; margin-bottom: 100px;">
     <ol>
-        <li><a href="v1">v1 powered by Angular 1.x</a></li>
-        <li><a href="v2">v2 powered by React</a></li>
-        <li><a href="v3">v3 powered by Vue</a></li>
+        <li><a href="v1">Version 1 powered by Angular 1.x (Finished...)</a></li>
+        <li><a href="v2">Version 2 powered by React (Working...)</a></li>
+        <li><a href="v3">Version 3 powered by Vue (Not Started...)</a></li>
     </ol>
+</div>
+<div id="disqus_thread"></div>
+<script>
+    (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+
+        s.src = '//nobackend-website.disqus.com/embed.js';
+
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
 </body>
 </html>
