--- a/v1/index.html
+++ b/v1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href="favicon.ico"><link href="app.css?375f51f17658b8c0f70d" rel="stylesheet"></head>
+<link rel="shortcut icon" href="favicon.ico"><link href="app.css?a6276485495439924616" rel="stylesheet"></head>
 <body ng-app="app" ng-cloak>
 
     <div id="container">
@@ -22,5 +22,15 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-75024401-1', { 'cookieDomain': 'none' });
 </script>
-<script src="vendor.js?375f51f17658b8c0f70d"></script><script src="bundle.js?375f51f17658b8c0f70d"></script></body>
+<script>
+    (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+
+        s.src = '//nobackend-website.disqus.com/embed.js';
+
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<script src="vendor.js?a6276485495439924616"></script><script src="bundle.js?a6276485495439924616"></script></body>
 </html>
