[#80] - Config webpack and npm script for vue app, currently is just a hacknew clone.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div style="margin-top: 100px; margin-bottom: 100px;">
     <ol>
         <li><a href="v1">Version 1 powered by Angular 1.x (Finished...)</a></li>
-        <li><a href="v2">Version 2 powered by React (Working...)</a></li>
-        <li><a href="v3">Version 3 powered by Vue (Not Started...)</a></li>
+        <li><a href="v2">Version 2 powered by Vue (Working...)</a></li>
+        <li><a href="v3">Version 3 powered by React (Not Started...)</a></li>
     </ol>
 </div>
 <div id="disqus_thread"></div>
