[#80] - Rename build dist folder name and add react in home page.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </div>
 <div style="margin-top: 100px; margin-bottom: 100px;">
     <ol>
-        <li><a href="v1">Version 1 powered by Angular 1.x (Finished...)</a></li>
-        <li><a href="v2">Version 2 powered by Vue (Working...)</a></li>
-        <li><a href="v3">Version 3 powered by React (Not Started...)</a></li>
+        <li><a href="_ng">Version 1 powered by Angular 1.x (Finished...)</a></li>
+        <li><a href="_vue">Version 2 powered by Vue (Working...)</a></li>
+        <li><a href="pages/react.html">Version 3 powered by React (Not Started...)</a></li>
     </ol>
 </div>
 <div id="disqus_thread"></div>
