--- a/_ng/index.html
+++ b/_ng/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href="favicon.ico"><link href="app.css?5cc25fd56a58a60623ed" rel="stylesheet"></head>
+<link rel="shortcut icon" href="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/favicon.ico"><link href="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/app.css?02cf8625daf8806953b6" rel="stylesheet"></head>
 <body ng-app="app" ng-cloak>
 
     <div id="container">
@@ -32,5 +32,5 @@
         (d.head || d.body).appendChild(s);
     })();
 </script>
-<script src="vendor.js?5cc25fd56a58a60623ed"></script><script src="bundle.js?5cc25fd56a58a60623ed"></script></body>
+<script src="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/vendor.js?02cf8625daf8806953b6"></script><script src="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/bundle.js?02cf8625daf8806953b6"></script></body>
 </html>
