--- a/_vue/index.html
+++ b/_vue/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Vue.js HN Clone</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
-  <link rel="shortcut icon" href="vue.png"><link href="app.css?ac274246df0c2038cdba" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/vue.png"><link href="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/app.css?182b7c9489d705e9ba7d" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script src="vendor.js?ac274246df0c2038cdba"></script><script src="bundle.js?ac274246df0c2038cdba"></script></body>
+  <script src="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/vendor.js?182b7c9489d705e9ba7d"></script><script src="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/bundle.js?182b7c9489d705e9ba7d"></script></body>
 </html>
