--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
 </div>
 <div style="margin-top: 100px; margin-bottom: 100px;">
     <ol>
-        <li><a href="_ng">Version 1 powered by Angular 1.x (Finished...)</a></li>
-        <li><a href="_vue">Version 2 powered by Vue (Working...)</a></li>
+        <li><a href="app/_ng">Version 1 powered by Angular 1.x (Finished...)</a></li>
+        <li><a href="app/_vue">Version 2 powered by Vue (Working...)</a></li>
         <li><a href="pages/react.html">Version 3 powered by React (Not Started...)</a></li>
     </ol>
 </div>
