[#5] - Add English toggle for translator articles.

--- a/_ng/index.html
+++ b/_ng/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/favicon.ico"><link href="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/app.css?4cf031420f7d61f424b0" rel="stylesheet"></head>
+<link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/favicon.ico"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/app.css?dc4a82f145a46d61b0be" rel="stylesheet"></head>
 <body ng-app="app" ng-cloak>
 
     <div id="container">
@@ -32,5 +32,5 @@
         (d.head || d.body).appendChild(s);
     })();
 </script>
-<script src="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/vendor.js?4cf031420f7d61f424b0"></script><script src="http://7xjbdq.com1.z0.glb.clouddn.com/_ng/bundle.js?4cf031420f7d61f424b0"></script></body>
+<script src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/vendor.js?dc4a82f145a46d61b0be"></script><script src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/bundle.js?dc4a82f145a46d61b0be"></script></body>
 </html>
