--- a/_vue/index.html
+++ b/_vue/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Vue.js HN Clone</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
-  <link rel="shortcut icon" href="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/vue.png"><link href="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/app.css?ca00a37d8d6b94e5c43a" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vue.png"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/app.css?f44cb1b62340ebcdc514" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script src="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/vendor.js?ca00a37d8d6b94e5c43a"></script><script src="http://7xjbdq.com1.z0.glb.clouddn.com/_vue/bundle.js?ca00a37d8d6b94e5c43a"></script></body>
+  <script src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vendor.js?f44cb1b62340ebcdc514"></script><script src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/bundle.js?f44cb1b62340ebcdc514"></script></body>
 </html>
