[#35] - Use firebase as backend service to authenticate users using GitHub.

--- a/src/angular/commons/header/header.html
+++ b/src/angular/commons/header/header.html
@@ -10,8 +10,9 @@
         <a ng-href="#!/note" class="active">Blog</a>
         <a ng-href="#!/photos">Photos</a>
         <a ng-href="#!/pages/zhihu">Zhihu</a>
-        <a ng-href="#!/dashboard">Dashboard</a>
-        <a ng-href="#!/users">Users</a>
+        <a ng-show="$ctrl.hasLogin" ng-href="#!/dashboard">Dashboard</a>
+        <a ng-show="$ctrl.hasLogin" ng-href="#!/users">Users</a>
+        <a ng-click="$ctrl.login()">{{ $ctrl.hasLogin ? $ctrl.name : 'Firebase' }}</a>
         <a href="https://github.com/JimmyLv/nobackend.website" target="_blank">GitHub</a>
     </div>
 
