--- a/_ng/index.html
+++ b/_ng/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/favicon.ico"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/app.css?dc4a82f145a46d61b0be" rel="stylesheet"></head>
+<link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/favicon.ico"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/app.css?1f0da14217a3f155da80" rel="stylesheet"></head>
 <body ng-app="app" ng-cloak>
 
     <div id="container">
@@ -23,14 +23,31 @@
     ga('create', 'UA-75024401-1', { 'cookieDomain': 'none' });
 </script>
 <script>
-    (function () { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-
-        s.src = '//nobackend-website.disqus.com/embed.js';
-
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'nobackend-website';
+    var disqus_identifier = 'nobackend-website';
+    var disqus_url = 'http://nobackend.website/_ng/#!/note';
+    var disqus_config = function () {
+        this.language = "en";
+    };
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
+    /* * * Disqus Reset Function * * */
+    var reset = function (newIdentifier, newUrl, newTitle, newLanguage) {
+        DISQUS.reset({
+            reload: true,
+            config: function () {
+                this.page.identifier = newIdentifier;
+                this.page.url = newUrl;
+                this.page.title = newTitle;
+                this.language = newLanguage;
+            }
+        });
+    };
 </script>
-<script src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/vendor.js?dc4a82f145a46d61b0be"></script><script src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/bundle.js?dc4a82f145a46d61b0be"></script></body>
+<script src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/vendor.js?1f0da14217a3f155da80"></script><script src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/bundle.js?1f0da14217a3f155da80"></script></body>
 </html>
