--- a/_vue/index.html
+++ b/_vue/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Vue.js HN Clone</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
-  <link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vue.png"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/app.css?f44cb1b62340ebcdc514" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vue.png"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/app.css?2a6e49b03d9c35f5577c" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vendor.js?f44cb1b62340ebcdc514"></script><script src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/bundle.js?f44cb1b62340ebcdc514"></script></body>
+  <script type="text/javascript" src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vendor.js?2a6e49b03d9c35f5577c"></script><script type="text/javascript" src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/bundle.js?2a6e49b03d9c35f5577c"></script></body>
 </html>
