[#52] - Add missing disqus_thread in the bottom of aside3 section.

--- a/src/angular/features/note/aside3/aside3.html
+++ b/src/angular/features/note/aside3/aside3.html
@@ -12,5 +12,7 @@
           show-toc="$ctrl.showToc">
     </post>
 
+    <div id="disqus_thread"></div>
+
     <dir-disqus config="$ctrl.disqusConfig"></dir-disqus>
 </div>
