[#86] - Change to use HTTPS qiniu cdn url.

--- a/_ng/index.html
+++ b/_ng/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/favicon.ico"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_ng/app.css?232d413bceaf34cfdae8" rel="stylesheet"></head>
+<link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_ng/favicon.ico"><link href="//o7mw3gkkh.qnssl.com/_ng/app.css?1e8e954e0b4421af5402" rel="stylesheet"></head>
 <body ng-app="app" ng-cloak>
 
     <div id="container">
@@ -49,5 +49,5 @@
         });
     };
 </script>
-<script type="text/javascript" src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/vendor.js?232d413bceaf34cfdae8"></script><script type="text/javascript" src="//7xjbdq.com1.z0.glb.clouddn.com/_ng/bundle.js?232d413bceaf34cfdae8"></script></body>
+<script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_ng/vendor.js?1e8e954e0b4421af5402"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_ng/bundle.js?1e8e954e0b4421af5402"></script></body>
 </html>
