--- a/_vue/index.html
+++ b/_vue/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Vue.js HN Clone</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
-  <link rel="shortcut icon" href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vue.png"><link href="//7xjbdq.com1.z0.glb.clouddn.com/_vue/app.css?2a27cee5e51ea728cd7e" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_vue/vue.png"><link href="//o7mw3gkkh.qnssl.com/_vue/app.css?64cdb290f0da473e8813" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/vendor.js?2a27cee5e51ea728cd7e"></script><script type="text/javascript" src="//7xjbdq.com1.z0.glb.clouddn.com/_vue/bundle.js?2a27cee5e51ea728cd7e"></script></body>
+  <script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_vue/vendor.js?64cdb290f0da473e8813"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_vue/bundle.js?64cdb290f0da473e8813"></script></body>
 </html>
