[#69] - Set up React infrastructure and finished hello world demo.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ol>
         <li><a href="_ng">Version 1 powered by Angular 1.x (Finished...)</a></li>
         <li><a href="_vue">Version 2 powered by Vue (Working...)</a></li>
-        <li><a href="pages/react.html">Version 3 powered by React (Not Started...)</a></li>
+        <li><a href="_react">Version 3 powered by React (In Progress...)</a></li>
     </ol>
 </div>
 <div id="disqus_thread"></div>
