--- a/_react/index.html
+++ b/_react/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello React!</title>
-<link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_react/favicon.ico"></head>
+<link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_react/favicon.ico"><link href="//o7mw3gkkh.qnssl.com/_react/app.css?269b8fbdfeec297a64b5" rel="stylesheet"></head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/vendor.js?254e838c89442d49d5ad"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/bundle.js?254e838c89442d49d5ad"></script></body>
+<script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/vendor.js?269b8fbdfeec297a64b5"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/bundle.js?269b8fbdfeec297a64b5"></script></body>
 </html>
