--- a/_react/index.html
+++ b/_react/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello React!</title>
-<link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_react/favicon.ico"><link href="//o7mw3gkkh.qnssl.com/_react/app.css?edc49bea48f57e521aa1" rel="stylesheet"></head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>最美博客 - nobackend-website created by 吕立青</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_react/favicon.ico"><link href="//o7mw3gkkh.qnssl.com/_react/app.css?15a6ccc0d25eba938cd7" rel="stylesheet"></head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/vendor.js?edc49bea48f57e521aa1"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/bundle.js?edc49bea48f57e521aa1"></script></body>
+<script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/vendor.js?15a6ccc0d25eba938cd7"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_react/bundle.js?15a6ccc0d25eba938cd7"></script></body>
 </html>
