--- a/_ng/index.html
+++ b/_ng/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>最美博客 - nobackend-website created by 吕立青</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_ng/favicon.ico"><link href="//o7mw3gkkh.qnssl.com/_ng/app.css?efac1a9a78b431975046" rel="stylesheet"></head>
-<body ng-app="app" ng-cloak>
+<link rel="shortcut icon" href="//o7mw3gkkh.qnssl.com/_ng/favicon.ico"><link href="//o7mw3gkkh.qnssl.com/_ng/app.css?52f188c73f9cbc3db516" rel="stylesheet"></head>
+<body ng-cloak>
 
     <div id="container">
         <app-header></app-header>
@@ -22,5 +22,5 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-75024401-1', { 'cookieDomain': 'none' });
 </script>
-<script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_ng/vendor.js?efac1a9a78b431975046"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_ng/bundle.js?efac1a9a78b431975046"></script></body>
+<script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_ng/vendor.js?52f188c73f9cbc3db516"></script><script type="text/javascript" src="//o7mw3gkkh.qnssl.com/_ng/bundle.js?52f188c73f9cbc3db516"></script></body>
 </html>
